; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb_loose.c_foreach_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb_loose.c_foreach_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.foreach_state = type { i32 }

@foreach_object_dir_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @foreach_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @foreach_cb(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.foreach_state*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.foreach_state*
  store %struct.foreach_state* %8, %struct.foreach_state** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @git_buf_cstr(i32* %9)
  %11 = call i32 @git_path_isdir(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* @foreach_object_dir_cb, align 4
  %17 = load %struct.foreach_state*, %struct.foreach_state** %6, align 8
  %18 = call i32 @git_path_direach(i32* %15, i32 0, i32 %16, %struct.foreach_state* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %14, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @git_path_isdir(i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_path_direach(i32*, i32, i32, %struct.foreach_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
